--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "eslintConfig": {
         "extends": "react-app"
     },
+    "proxy": "http://localhost:9999",
     "browserslist": {
         "production": [
             ">0.2%",
